route-default.yaml
# 场景 3: 默认路由 & CORS
# 转发所有其他请求到后端。
# 这里的后端 Gin 应用已经配置了 CORS 中间件，所以可以处理跨域请求。
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-route-default
  namespace: default
spec:
  parentRefs:
  - name: eg
  hostnames:
  - "demo.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: demo-app
      port: 80
